--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ color: greenyellow;
     width: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
+    
     align-items: center;
 }
 
