--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,7 @@ color: greenyellow;
     width: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -71,7 +70,7 @@ color: greenyellow;
     box-shadow: 0 0 10px rgb(247, 157, 247);
     border-radius: 15px;
 }
-.playBtn {
+.playBtn, .action-btn {
     width: 300px;
     height: 50px;
     font-size: large;
@@ -114,4 +113,9 @@ color: greenyellow;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.action-btn {
+    width: 110px;
+    height: 40px;
+    font-size: 14px;
 }
