--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ color: greenyellow;
     width: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 100px;
     align-items: center;
 }
 
@@ -69,8 +70,13 @@ color: greenyellow;
     border: 2px solid black;
     box-shadow: 0 0 10px rgb(247, 157, 247);
     border-radius: 15px;
+    text-align: center;
+    line-height: 50px;
+    font-weight: 700;
+    font-size: 18px;
+    color: blueviolet
 }
-.playBtn, .action-btn {
+.playBtn, .action-btn, .choice-btn {
     width: 300px;
     height: 50px;
     font-size: large;
@@ -118,4 +124,17 @@ color: greenyellow;
     width: 110px;
     height: 40px;
     font-size: 14px;
+}
+.choice-btn {
+    width: 80px;
+    height: 70px;
+    border-radius: 15px;
+    font-size: 45px;
+    text-align: center;
+}
+#buttonsContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10px;
 }
